--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     }
     .discord-tooltip {
       position: absolute;
-      bottom: 127%; /* Changed from 125% to 127% to lower by ~2px */
+      bottom: 130%; /* Changed from 125% to 130% (lowered by 5px total) */
       left: 50%;
       transform: translateX(-50%);
       background: rgba(0, 0, 0, 0.75);
