--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     }
     .discord-tooltip {
       position: absolute;
-      bottom: 130%; /* Changed from 125% to 130% (lowered by 5px total) */
+      bottom: calc(130% + 4px); /* Lowered by 4 pixels */
       left: 50%;
       transform: translateX(-50%);
       background: rgba(0, 0, 0, 0.75);
