--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     }
     .discord-tooltip {
       position: absolute;
-      bottom: calc(130% + 4px); /* Lowered by 4 pixels */
+      bottom: 35px; /* Lowered by 4 pixels from ~39px (130% of 30px) */
       left: 50%;
       transform: translateX(-50%);
       background: rgba(0, 0, 0, 0.75);
