--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@
       transition: opacity .5s ease;
       z-index: 100;
       text-shadow: 0 0 10px #fff, 0 0 20px #ff69b4;
+      animation: introPulse 2s infinite ease-in-out;
+    }
+    @keyframes introPulse {
+      0%, 100% {
+        transform: scale(1);
+        text-shadow: 0 0 10px #fff, 0 0 20px #ff69b4;
+      }
+      50% {
+        transform: scale(1.05);
+        text-shadow: 0 0 15px #fff, 0 0 30px #ff69b4;
+      }
     }
     .intro-screen:hover {
       text-shadow: 0 0 10px #fff, 0 0 30px #fff, 0 0 40px #ff69b4, 0 0 50px #ff69b4;
@@ -98,12 +109,16 @@
         text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #ff69b4, 0 0 40px #ff69b4;
       }
     }
-    .discord-wrapper {
-      position: relative;
-      display: inline-block;
+    .social-links {
+      display: flex;
+      gap: 20px;
       margin-top: 30px;
     }
-    .discord-tooltip {
+    .discord-wrapper, .x-wrapper {
+      position: relative;
+      display: inline-block;
+    }
+    .discord-tooltip, .x-tooltip {
       position: absolute;
       bottom: 35px;
       left: 50%;
@@ -119,14 +134,13 @@
       font-size: 0.7rem;
       text-shadow: 0 0 3px #fff, 0 0 10px #ff69b4;
     }
-    .discord-wrapper:hover .discord-tooltip {
+    .discord-wrapper:hover .discord-tooltip, .x-wrapper:hover .x-tooltip {
       opacity: 1;
     }
-    .discord-logo {
+    .discord-logo, .x-logo {
       display: inline-block;
       width: 100px;
       height: 30px;
-      background-image: url('https://github.com/jujuexe/fr/blob/main/image.png?raw=true');
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
@@ -135,7 +149,13 @@
       transition: transform 0.3s ease;
       filter: drop-shadow(0 0 5px #fff) drop-shadow(0 0 10px #ff69b4);
     }
-    .discord-logo:hover {
+    .discord-logo {
+      background-image: url('https://github.com/jujuexe/fr/blob/main/image.png?raw=true');
+    }
+    .x-logo {
+      background-image: url('https://upload.wikimedia.org/wikipedia/commons/5/57/X_logo_2023_%28white%29.png');
+    }
+    .discord-logo:hover, .x-logo:hover {
       transform: scale(1.05);
       filter: drop-shadow(0 0 10px #fff) drop-shadow(0 0 20px #ff69b4);
     }
@@ -202,9 +222,15 @@
   <div class="container">
     <img src="https://pub-3bfa94b368d34d7e839934cc455b9712.r2.dev/ec8682c3a3959691f9506c79de83c2f0.png" alt="pfp" class="pfp">
     <div class="title">JuJu.wtf</div>
-    <div class="discord-wrapper">
-      <a href="https://discord.gg/UfVueQFRcD" class="discord-logo" aria-label="discord" target="_blank" rel="noopener noreferrer">discord</a>
-      <div class="discord-tooltip">Invite to JuJu Fanclub</div>
+    <div class="social-links">
+      <div class="discord-wrapper">
+        <a href="https://discord.gg/UfVueQFRcD" class="discord-logo" aria-label="discord" target="_blank" rel="noopener noreferrer">discord</a>
+        <div class="discord-tooltip">Invite to JuJu Fanclub</div>
+      </div>
+      <div class="x-wrapper">
+        <a href="https://x.com/jujuwtfz" class="x-logo" aria-label="X" target="_blank" rel="noopener noreferrer">X</a>
+        <div class="x-tooltip">@jujuwtfz on X</div>
+      </div>
     </div>
   </div>
   <div id="audio-controls">
@@ -245,7 +271,24 @@
         sparkle.remove();
       }, 1000);
     });
+
     const introScreen = document.getElementById('intro-screen');
+    function addIntroSparkle() {
+      if (!introScreen.classList.contains('hidden')) {
+        const sparkle = document.createElement('div');
+        sparkle.className = 'sparkle';
+        document.body.appendChild(sparkle);
+        const x = Math.random() * window.innerWidth;
+        const y = Math.random() * window.innerHeight;
+        sparkle.style.left = `${x}px`;
+        sparkle.style.top = `${y}px`;
+        setTimeout(() => {
+          sparkle.remove();
+        }, 1000);
+      }
+    }
+    setInterval(addIntroSparkle, 200);
+
     const video = document.getElementById('background-video');
     const pauseButton = document.getElementById('pause-button');
     let isPaused = false;
