--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     }
     .social-links {
       display: flex;
-      gap: 20px;
+      gap: 10px;
       margin-top: 30px;
     }
     .discord-wrapper, .x-wrapper {
@@ -120,7 +120,7 @@
     }
     .discord-tooltip, .x-tooltip {
       position: absolute;
-      bottom: 35px;
+      bottom: 42px;
       left: 50%;
       transform: translateX(-50%);
       background: rgba(0, 0, 0, 0.75);
@@ -139,8 +139,8 @@
     }
     .discord-logo, .x-logo {
       display: inline-block;
-      width: 100px;
-      height: 30px;
+      width: 120px;
+      height: 36px;
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
@@ -150,7 +150,7 @@
       filter: drop-shadow(0 0 5px #fff) drop-shadow(0 0 10px #ff69b4);
     }
     .discord-logo {
-      background-image: url('https://github.com/jujuexe/fr/blob/main/image.png?raw=true');
+      background-image: url('https://discord.com/assets/2c21aeda9debedd8179f3798f7b60c35.svg');
     }
     .x-logo {
       background-image: url('https://upload.wikimedia.org/wikipedia/commons/5/57/X_logo_2023_%28white%29.png');
