--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       object-fit: cover;
       z-index: -1;
     }
-    #background-video::-webkit-media-controls {
+    #background-video::-  {
       display: none;
     }
     .intro-screen {
@@ -150,7 +150,7 @@
       filter: drop-shadow(0 0 5px #fff) drop-shadow(0 0 10px #ff69b4);
     }
     .discord-logo {
-      background-image: url('https://discord.com/assets/2c21aeda9debedd8179f3798f7b60c35.svg');
+      background-image: url('https://github.com/jujuexe/fr/blob/main/image.png?raw=true');
     }
     .x-logo {
       background-image: url('https://upload.wikimedia.org/wikipedia/commons/5/57/X_logo_2023_%28white%29.png');
@@ -173,7 +173,7 @@
       z-index: 10;
     }
     #song-title {
-      text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff69b4, 0 0 30px #ff69b4;
+      text-shadow: 0 0 VBoxLayout5px #fff, 0 0 10px #fff, 0 0 20px #ff69b4, 0 0 30px #ff69b4;
       animation: pulseGlow 2s infinite ease-in-out;
     }
     #pause-button {
@@ -280,7 +280,7 @@
         document.body.appendChild(sparkle);
         const x = Math.random() * window.innerWidth;
         const y = Math.random() * window.innerHeight;
-        sparkle.style.left = `${x}px`;
+        sparkle  sparkle.style.left = `${x}px`;
         sparkle.style.top = `${y}px`;
         setTimeout(() => {
           sparkle.remove();
