--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       object-fit: cover;
       z-index: -1;
     }
-    #background-video::-  {
+    #background-video::-webkit-media-controls {
       display: none;
     }
     .intro-screen {
@@ -49,7 +49,7 @@
       align-items: center;
       font-size: 2rem;
       cursor: pointer;
-      transition: opacity .5s ease;
+      transition: opacity 0.5s ease;
       z-index: 100;
       text-shadow: 0 0 10px #fff, 0 0 20px #ff69b4;
       animation: introPulse 2s infinite ease-in-out;
@@ -60,8 +60,8 @@
         text-shadow: 0 0 10px #fff, 0 0 20px #ff69b4;
       }
       50% {
-        transform: scale(1.05);
-        text-shadow: 0 0 15px #fff, 0 0 30px #ff69b4;
+        transform: scale(1.03);
+        text-shadow: 0 0 12px #fff, 0 0 25px #ff69b4;
       }
     }
     .intro-screen:hover {
@@ -69,7 +69,7 @@
     }
     .hidden {
       opacity: 0;
-      pointer-events: none;
+      display: none;
     }
     .container {
       position: absolute;
@@ -103,7 +103,9 @@
     }
     @keyframes pulseGlow {
       0%, 100% {
-        text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff69b4, 0 0 30px #ff69b4;
+        text-shadow: 0 0 5px #fff, 0 0 10px ##pragma clang diagnostic push
+#pragma clang diagnostic ignored "-Wnullability-completeness"
+fff, 0 0 20px #ff69b4, 0 0 30px #ff69b4;
       }
       50% {
         text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #ff69b4, 0 0 40px #ff69b4;
@@ -173,7 +175,7 @@
       z-index: 10;
     }
     #song-title {
-      text-shadow: 0 0 VBoxLayout5px #fff, 0 0 10px #fff, 0 0 20px #ff69b4, 0 0 30px #ff69b4;
+      text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff69b4, 0 0 30px #ff69b4;
       animation: pulseGlow 2s infinite ease-in-out;
     }
     #pause-button {
@@ -280,14 +282,14 @@
         document.body.appendChild(sparkle);
         const x = Math.random() * window.innerWidth;
         const y = Math.random() * window.innerHeight;
-        sparkle  sparkle.style.left = `${x}px`;
+        sparkle.style.left = `${x}px`;
         sparkle.style.top = `${y}px`;
         setTimeout(() => {
           sparkle.remove();
         }, 1000);
       }
     }
-    setInterval(addIntroSparkle, 200);
+    setInterval(addIntroSparkle, 300);
 
     const video = document.getElementById('background-video');
     const pauseButton = document.getElementById('pause-button');
