--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       height: 60px;
       margin-bottom: 20px;
       border-radius: 50%;
-      box-shadow: 0 0 5px #fff, 0 0 10px #ff69b4;
+      box-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff69b4, 0 0 30px #ff69b4;
       animation: pulseGlow 2s infinite ease-in-out;
     }
     .intro-screen .main-text {
@@ -128,14 +128,16 @@
     @keyframes pulseGlow {
       0%, 100% {
         text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff69b4, 0 0 30px #ff69b4;
+        box-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff69b4, 0 0 30px #ff69b4;
       }
       50% {
         text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #ff69b4, 0 0 40px #ff69b4;
+        box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #ff69b4, 0 0 40px #ff69b4;
       }
     }
     .social-links {
       display: flex;
-      gap: 2px;
+      gap: 5px;
       margin-top: 30px;
     }
     .discord-wrapper, .x-wrapper {
@@ -163,11 +165,14 @@
     }
     .discord-logo, .x-logo {
       display: inline-block;
-      width: 120px;
-      height: 36px;
+      width: 100px;
+      height: 30px;
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
+      background-clip: content-box;
+      padding: 0;
+      box-sizing: content-box;
       text-indent: -9999px;
       overflow: hidden;
       transition: transform 0.3s ease;
@@ -240,7 +245,7 @@
 </head>
 <body>
   <button class="intro-screen glow" id="intro-screen" aria-label="Enter site">
-    <img src="https://github.com/jujuexe/fr/blob/main/980195a4b420a62cfca4fa7450db7ab7.png?raw=true" alt="logo">
+    <img src="https://cdn-images.dzcdn.net/images/cover/c127e42a0ff01672f91a98094ba9bcc5/0x1900-000000-80-0-0.jpg" alt="logo">
     <span class="main-text">click to enter</span>
     <span class="sub-text">welcome to juju.wtf :3</span>
   </button>
