--- a/index.html
+++ b/index.html
@@ -11,30 +11,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>♡ juju.wtf</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <script>
-    let titleText = "♡ JuJu.wtf ";
-    let index = 0;
-    setInterval(() => {
-      document.title = titleText.slice(index) + titleText.slice(0, index);
-      index = (index + 1) % titleText.length;
-    }, 200);
-
-    const messages = ["hai :3", "JuJu.wtf"];
-    let msgIndex = 0;
-    setInterval(() => {
-      const titleElement = document.querySelector('.title');
-      titleElement.style.opacity = 0;
-      setTimeout(() => {
-        titleElement.textContent = messages[msgIndex];
-        titleElement.style.transform = 'translateY(-3px)';
-        titleElement.style.opacity = 1;
-        setTimeout(() => {
-          titleElement.style.transform = 'translateY(0)';
-        }, 150);
-        msgIndex = (msgIndex + 1) % messages.length;
-      }, 500);
-    }, 5000);
-  </script>
   <style>
     * {
       box-sizing: border-box;
@@ -102,7 +78,8 @@
       border-radius: 50%;
       object-fit: cover;
       margin-bottom: 20px;
-      border: 2px solid #fff;
+      box-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff69b4, 0 0 30px #ff69b4;
+      animation: pulseGlow 2s infinite ease-in-out;
     }
     .title {
       font-size: 2rem;
@@ -121,6 +98,30 @@
         text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #ff69b4, 0 0 40px #ff69b4;
       }
     }
+    .discord-wrapper {
+      position: relative;
+      display: inline-block;
+      margin-top: 30px;
+    }
+    .discord-tooltip {
+      position: absolute;
+      bottom: 35px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(0, 0, 0, 0.75);
+      color: #fff;
+      padding: 4px 8px;
+      border-radius: 6px;
+      white-space: nowrap;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.3s ease;
+      font-size: 0.7rem;
+      text-shadow: 0 0 3px #fff, 0 0 10px #ff69b4;
+    }
+    .discord-wrapper:hover .discord-tooltip {
+      opacity: 1;
+    }
     .discord-logo {
       display: inline-block;
       width: 100px;
@@ -132,10 +133,11 @@
       text-indent: -9999px;
       overflow: hidden;
       transition: transform 0.3s ease;
-      margin-top: 30px;
+      filter: drop-shadow(0 0 5px #fff) drop-shadow(0 0 10px #ff69b4);
     }
     .discord-logo:hover {
       transform: scale(1.05);
+      filter: drop-shadow(0 0 10px #fff) drop-shadow(0 0 20px #ff69b4);
     }
     #audio-controls {
       position: absolute;
@@ -150,6 +152,10 @@
       animation: fadeIn 1s ease-out forwards;
       z-index: 10;
     }
+    #song-title {
+      text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff69b4, 0 0 30px #ff69b4;
+      animation: pulseGlow 2s infinite ease-in-out;
+    }
     #pause-button {
       background: none;
       border: none;
@@ -157,6 +163,7 @@
       cursor: pointer;
       margin-top: 5px;
       text-transform: lowercase;
+      text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff69b4, 0 0 30px #ff69b4;
     }
     @keyframes fadeIn {
       to {
@@ -164,8 +171,6 @@
         transform: translateX(-50%) translateY(0);
       }
     }
-
-    /* Sparkle styles */
     .sparkle {
       position: fixed;
       width: 8px;
@@ -177,7 +182,6 @@
       box-shadow: 0 0 10px #fff, 0 0 20px #ff69b4, 0 0 30px #ff69b4;
       animation: sparkleFade 1s ease-out forwards;
     }
-
     @keyframes sparkleFade {
       0% {
         opacity: 1;
@@ -198,29 +202,49 @@
   <div class="container">
     <img src="https://pub-3bfa94b368d34d7e839934cc455b9712.r2.dev/ec8682c3a3959691f9506c79de83c2f0.png" alt="pfp" class="pfp">
     <div class="title">JuJu.wtf</div>
-    <a href="https://discord.gg/UfVueQFRcD" class="discord-logo" aria-label="discord">discord</a>
+    <div class="discord-wrapper">
+      <a href="https://discord.gg/UfVueQFRcD" class="discord-logo" aria-label="discord" target="_blank" rel="noopener noreferrer">discord</a>
+      <div class="discord-tooltip">Invite to JuJu Fanclub</div>
+    </div>
   </div>
   <div id="audio-controls">
     <div id="song-title">Now Playing: Flxr</div>
     <button id="pause-button">Pause ⏯</button>
   </div>
-
-  <!-- Sparkle Script -->
   <script>
+    let titleText = "♡ JuJu.wtf ";
+    let index = 0;
+    setInterval(() => {
+      document.title = titleText.slice(index) + titleText.slice(0, index);
+      index = (index + 1) % titleText.length;
+    }, 200);
+
+    const messages = ["haiii :3", "JuJu.wtf"];
+    let msgIndex = 0;
+    setInterval(() => {
+      const titleElement = document.querySelector('.title');
+      titleElement.style.opacity = 0;
+      setTimeout(() => {
+        titleElement.textContent = messages[msgIndex];
+        titleElement.style.transform = 'translateY(-3px)';
+        titleElement.style.opacity = 1;
+        setTimeout(() => {
+          titleElement.style.transform = 'translateY(0)';
+        }, 150);
+        msgIndex = (msgIndex + 1) % messages.length;
+      }, 500);
+    }, 5000);
+
     document.addEventListener('mousemove', e => {
       const sparkle = document.createElement('div');
       sparkle.className = 'sparkle';
       document.body.appendChild(sparkle);
       sparkle.style.left = `${e.clientX}px`;
       sparkle.style.top = `${e.clientY}px`;
-
       setTimeout(() => {
         sparkle.remove();
       }, 1000);
     });
-  </script>
-
-  <script>
     const introScreen = document.getElementById('intro-screen');
     const video = document.getElementById('background-video');
     const pauseButton = document.getElementById('pause-button');
